Updated Speakers tab, topics of interest for cfp and home page as well as contact email

--- a/contact.html
+++ b/contact.html
@@ -72,23 +72,23 @@
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
-                    <!-- <li><a href="about.html">About</a></li> -->
+                    <li ><a href="index.html">Home</a></li> 
+                  <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
-                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
                             <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
+                            <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
                         </ul>
                     </li>
 
 
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
-                            <li><a href="Foundational-Research.html">Foundational Research</a></li>
-                            <li><a href="Systems-Research.html">Systems Research</a>
+                            <li><a href="Foundational-Research.html">Topics of Interest</a></li>
+                            <!-- <li><a href="Systems-Research.html">Systems Research</a>
                             </li>
-                            <li><a href="Applications.html">Applications</a></li>
+                            <li><a href="Applications.html">Applications</a></li> -->
                             <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
                         </ul>
                     </li>
@@ -100,13 +100,13 @@
                             <li><a href="smartcity.html">Smart City Stack workshop</a></li>
                             <li><a href="girlgeekhack.html">GirlGeekHack'23 (Mangalore Subsection Edition)</a></li>
                             <li><a href="studentcongress.html">CS Student Congress</a></li>
-                        </ul></li>
+                        </ul></li>-->
 
 
-                    <li><a href="speakers.html">Speakers</a></li> -->
+                    <li><a href="speakers.html">Speakers</a></li> 
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
-                    <li><a href="contact.html">Contact</a></li>
+                    <li class="menu-active"><a href="contact.html">Contact</a></li>
                     
                         <!-- <li><a href="#">Archives</a>
 
@@ -155,7 +155,7 @@
             <div class="section-header">
                 <h3>Contact</h3>
             </div>
-            <p style="text-align: center;">For any query write an email to <a href="#">icdds2023@gmail.com</a></p>
+            <p style="text-align: center;">For any query write an email to <a href="#">icdds24@pes.edu</a></p>
             <!-- <div class="row">
 
 
@@ -214,7 +214,7 @@
                                     class="fa fa-twitter"></i></a>
                             <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i
                                     class="fa fa-facebook"></i></a>
-                            <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i
+                            <a href="https://instagram.com/ieeecsbc" class="instagram" target="_blank"><i
                                     class="fa fa-instagram"></i></a>
                             <!-- <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a> -->
                             <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i
