--- a/index.html
+++ b/index.html
@@ -77,24 +77,24 @@
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
+                    <li class="menu-active"><a href="index.html">Home</a></li>
                     <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
+                            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
                             <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical
                                     Program Committee</a></li>
-                            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
                         </ul>
                     </li>
 
 
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
-                            <li><a href="Foundational-Research.html">Foundational Research</a></li>
-                            <li><a href="Systems-Research.html">Systems Research</a>
+                            <li><a href="Foundational-Research.html">Topics of Interest</a></li>
+                            <!-- <li><a href="Systems-Research.html">Systems Research</a>
                             </li>
-                            <li><a href="Applications.html">Applications</a></li>
+                            <li><a href="Applications.html">Applications</a></li> -->
                             <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
                         </ul>
                     </li>
@@ -109,7 +109,7 @@
                         </ul></li> -->
 
 
-                    <!-- <li><a href="speakers.html">Speakers</a></li> -->
+                     <li><a href="speakers.html">Speakers</a></li>
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
@@ -165,13 +165,22 @@
     <section id="about">
         <div class="container1">
             <div class="card" id="card" style="height: 350px;">
-                <h3 style="margin-top: 10px;">Latest Updates</h3>
-                <p><strong>Paper Submission Deadline:</strong>July 15, 2024<br></p>
-                <p><b>Author Notifications: </b> <b>September 30, 2024</b></p>
+                <p class="add-info"><strong><span class='imp' style="font-size: 3pze
+                    5px;">Important Dates</span></strong>
+                <p class="para">
+                    <strong>Paper Submission Starts:  </strong>May 15, 2024<br>
+                    <strong>Full Paper Submission Deadline:  </strong>June 30, 2024<br>
+                    <strong>Notification of Acceptance: </strong>September 30, 2024<br>
+                    <strong>Camera Ready Submission: </strong>October 20, 2024<br>
+                    <strong>Registration Due: </strong> November 1, 2024<br>
+                    <strong>Conference Dates: </strong>December 5-7, 2024<br>
+                    <strong>Venue: </strong> PES University, Bengaluru
+                  </p>
                 <!-- <p><a href="https://docs.google.com/document/d/1CJ3bkDRkxrR5mujIvdYy0g0O8reSHiTNgxUclt4dGPM/edit" target="_blank">Author Instructions for eCopyright, Camera Ready Submission and Registration</a></p>
                 <p><a href="https://docs.google.com/document/d/1GsCEpjlnCMX8oQMoxhL6BmrTVmQ6HpmM/edit" target="_blank" style="width: 100%;">Conference Schedule</a></p> -->
             </div>
         </div>
+        
         <div class="container">
 
             <div class="row">
@@ -211,7 +220,7 @@
                                 <div class="about-img">
 
                                 </div>
-                                <p>
+                                <p style="text-align: justify;">
                                     Rapid advances and growth in the connected world across different application
                                     domains are fast
                                     pacing the data volumes generated from a range of devices. Such high growth is
@@ -224,7 +233,7 @@
                                     data; data
                                     management; computation; knowledge discovery; decision support, etc. 
                                 </p>
-                                <p>ICDDS'24 aims
+                                <p tyle="text-align: justify;">ICDDS'24 aims
                                     to look
                                     broadly at data based innovation and technologies in interdisciplinary areas. The
                                     conference is
@@ -239,21 +248,24 @@
                                     <header class="section-header">
                                         <h3>Call For Papers</h3>
                                     </header>
-                                    <div class="row">
+                                    <div class="row" >
 
                                         <div class="col-md-12 content-cols content-cols-right">
-                                            <div class="content-col">
-                                                <p>
+                                            <div class="content-col" >
+                                                <p style="font-size: 20px !important;">
                                                     ICDDS’24, a flagship conference of IEEE Computer Society Bangalore
                                                     Chapter, invites researchers, engineers, and subject matter experts
                                                     from academia, industry, and start-ups to present their latest
                                                     innovations in Data/Decision Systems (DDS) and their applications
                                                 </p>
-                                                <p>ICDDS has three tracks : <br>(i) Foundational Research <br>(ii)
+                                                <p style="font-size: 20px !important;">ICDDS has three tracks : <br>(i) Foundational Research <br>(ii)
                                                     Systems Research <br>(iii) Applications. <br>Authors are
                                                     encouraged to submit their original work(s) to any of these tracks.
                                                 </p>
-                                                <p>Track-I Foundational Research aims to receive submissions from
+                                                <p style="font-size: 20px !important;">Click below to know more about:</p> <br> 
+                                                <a href="Foundational-Research.html" style="margin: 1% 24%;">Topics of Interests for Research</a>
+                                                <a href="AuthorGuide.html" style="margin: 1% 24%;">Author Guidelines</a>
+                                                <!-- <p>Track-I Foundational Research aims to receive submissions from
                                                     theory to novel findings and current practices in all aspects of
                                                     Data/Decision science</p>
                                                 <p>Track-II Systems Research is focused on research addressing
@@ -272,14 +284,15 @@
                                                     <a href="Applications.html">Applications </a>
                                                     <p class="para">
                                                         <strong>Important Dates : </strong><br>
-                                                        <strong>Abstract Submission Starts:</strong> June 15, 2024<br>
-                                                        <strong>Paper Submission Deadline:</strong> July 15, 2024<br>
-                                                        <strong>Final Notification:</strong> September 30, 2024<br>
-                                                        <strong>Camera Ready Submission:</strong> October 20, 2024<br>
+                                                        <strong>Paper Submission Starts:</strong>May 15, 2024<br>
+                                                        <strong>Full Paper Submission Deadline:</strong>June 30, 2024<br>
+                                                        <strong>Notification of Acceptance:</strong>September 30, 2024<br>
+                                                        <strong>Camera Ready Submission:</strong>October 20, 2024<br>
                                                         <strong>Registration Due:</strong> November 1, 2024<br>
+                                                        <strong>Conference Dates:</strong>December 5-7, 2024<br>
                                                         <strong>Venue :</strong> PES University, Bengaluru
-                                                    </p>
-                                                </center>
+                                                      </p>
+                                                </center> -->
                                             </div>
                                             <br>
                                         </div>
@@ -396,7 +409,7 @@
                                     class="fa fa-twitter"></i></a>
                             <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i
                                     class="fa fa-facebook"></i></a>
-                            <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i
+                            <a href="https://instagram.com/ieeecsbc" class="instagram" target="_blank"><i
                                     class="fa fa-instagram"></i></a>
                             <!-- <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a> -->
                             <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i
