--- a/speakers.html
+++ b/speakers.html
@@ -93,12 +93,15 @@
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
+            <li><a href="index.html">Home</a></li>
             <!-- <li><a href="about.html">About</a></li> -->
             <li>
               <a href="#">Committee</a>
 
               <ul class="nav-dropdown">
+                <li>
+                  <a href="Organizing-Committee.html">Organizing Committee</a>
+                </li>
                 <li>
                   <a
                     href="Technical-Committee.html"
@@ -107,9 +110,6 @@
                     >Technical Program Committee</a
                   >
                 </li>
-                <li>
-                  <a href="Organizing-Committee.html">Organizing Committee</a>
-                </li>
               </ul>
             </li>
 
@@ -117,14 +117,14 @@
               <a href="#">Call for Papers</a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="Foundational-Research.html">Foundational Research</a>
+                  <a href="Foundational-Research.html">Topics of Interest</a>
                 </li>
-                <li><a href="Systems-Research.html">Systems Research</a></li>
-                <li><a href="Applications.html">Applications</a></li>
+                <!-- <li><a href="Systems-Research.html">Systems Research</a></li>
+                <li><a href="Applications.html">Applications</a></li> -->
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
-            <li><a href="Program-Schedule.html">Program Schedule</a></li>
+            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li>
 
             <li>
               <a href="#">Workshops</a>
@@ -137,20 +137,20 @@
                 </li>
                 <li><a href="studentcongress.html">CS Student Congress</a></li>
               </ul>
-            </li>
+            </li> -->
 
-            <li><a href="speakers.html">Speakers</a></li>
+            <li class="menu-active"><a href="speakers.html">Speakers</a></li>
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
 
-            <li>
+            <!-- <li>
               <a href="#">Archives</a>
 
               <ul class="nav-dropdown">
                 <li><a href="2022.html">2022</a></li>
               </ul>
-            </li>
+            </li> -->
             <li><a href="registration.html">Registration</a></li>
           </ul>
         </nav>
@@ -196,7 +196,8 @@
                     <h3>Speakers</h3>
                 </center>
             </div>
-            <div class="row">
+            <p class="para" style="font-size: 25px; color:rgb(239, 151, 9); font-weight:500; text-align:center">Coming Soon!</p>
+            <!-- <div class="row">
 
                 <div class="col-md-10">
                     <section id="indexspeaker">
@@ -224,7 +225,7 @@
 
 
 
-                            </div>
+                            </div> -->
 
                         </div>
                     </section>
@@ -260,7 +261,7 @@
                   ><i class="fa fa-facebook"></i
                 ></a>
                 <a
-                  href="https://instagram.com/ieeecsbs"
+                  href="https://instagram.com/ieeecsbc"
                   class="instagram"
                   target="_blank"
                   ><i class="fa fa-instagram"></i
