--- a/Applications.html
+++ b/Applications.html
@@ -97,26 +97,25 @@
         <div id="logo" class="pull-left">
           <!-- Uncomment below if you prefer to use text logo -->
           <h2><a href="index.html" class="scrollto">ICDDS</a></h2>
-          <!-- <a href="/">ICDDS <img src="img/logo.png" alt="Logo" /></a> -->
+          <a href="/">ICDDS <img src="img/logo.png" alt="Logo" /></a>
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
-            <!-- <li><a href="about.html">About</a></li> -->
+            <li class="menu"><a href="/">Home</a></li>
+            <!-- <li><a href="about.html">About</a></li>  -->
             <li>
               <a href="#">Committee</a>
 
               <ul class="nav-dropdown">
                 <li>
+                  <a href="Organizing-Committee.html">Organizing Committee</a>
+                </li>
+                <li>
                   <a
                     href="Technical-Committee.html"
                     target="_blank"
                     rel="noopener noreferrer"
-                    >Technical Program Committee</a
-                  >
-                </li>
-                <li>
-                  <a href="Organizing-Committee.html">Organizing Committee</a>
+                    >Technical Program Committee</a>
                 </li>
               </ul>
             </li>
@@ -125,10 +124,10 @@
               <a href="#">Call for Papers</a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="Foundational-Research.html">Foundational Research</a>
+                  <a href="Foundational-Research.html">Topics of Interest</a>
                 </li>
-                <li><a href="Systems-Research.html">Systems Research</a></li>
-                <li><a href="Applications.html">Applications</a></li>
+                <!-- <li><a href="Systems-Research.html">Systems Research</a></li>
+                <li><a href="Applications.html">Applications</a></li> -->
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
@@ -147,7 +146,7 @@
               </ul>
             </li> -->
 
-            <!-- <li><a href="speakers.html">Speakers</a></li> -->
+            <li><a href="speakers.html">Speakers</a></li>
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
@@ -322,7 +321,7 @@
                   ><i class="fa fa-facebook"></i
                 ></a>
                 <a
-                  href="https://instagram.com/ieeecsbs"
+                  href="https://instagram.com/ieeecsbc"
                   class="instagram"
                   target="_blank"
                   ><i class="fa fa-instagram"></i
