--- a/AuthorGuide.html
+++ b/AuthorGuide.html
@@ -79,24 +79,24 @@
       </div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-            <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
+            <li><a href="index.html">Home</a></li>
             <!-- <li><a href="about.html">About</a></li> -->
             <li><a href="#">Committee</a>
 
                 <ul class="nav-dropdown">
+                  <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
                     <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
-                    <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
                 </ul>
             </li>
 
 
             <li><a href="#">Call for Papers</a>
                 <ul class="nav-dropdown">
-                    <li><a href="Foundational-Research.html">Foundational Research</a></li>
-                    <li><a href="Systems-Research.html">Systems Research</a>
+                    <li><a href="Foundational-Research.html">Topics of Interest</a></li>
+                    <!-- <li><a href="Systems-Research.html">Systems Research</a>
                     </li>
-                    <li><a href="Applications.html">Applications</a></li>
-                    <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
+                    <li><a href="Applications.html">Applications</a></li> -->
+                    <li class="menu-active"><a href="AuthorGuide.html">Author's Guidelines</a></li>
                 </ul>
             </li>
             <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li> -->
@@ -110,7 +110,7 @@
                 </ul></li> -->
 
 
-            <!-- <li><a href="speakers.html">Speakers</a></li> -->
+             <li><a href="speakers.html">Speakers</a></li> 
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
@@ -262,7 +262,7 @@
               <a href="https://twitter.com/ieeecsbs" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
               <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i
                   class="fa fa-facebook"></i></a>
-              <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i
+              <a href="https://instagram.com/ieeecsbc" class="instagram" target="_blank"><i
                   class="fa fa-instagram"></i></a>
               <!-- <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a> -->
               <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i
