--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -73,23 +73,23 @@
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
+                    <li><a href="index.html">Home</a></li>
                     <!-- <li><a href="about.html">About</a></li> -->
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
+                            <li class="menu-active"><a href="Organizing-Committee.html">Organizing Committee</a></li>
                             <li><a href="Technical-Committee.html" target="_blank" rel="noopener noreferrer">Technical Program Committee</a></li>
-                            <li><a href="Organizing-Committee.html">Organizing Committee</a></li>
                         </ul>
                     </li>
 
 
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
-                            <li><a href="Foundational-Research.html">Foundational Research</a></li>
-                            <li><a href="Systems-Research.html">Systems Research</a>
+                            <li><a href="Foundational-Research.html">Topics of Interest</a></li>
+                            <!-- <li><a href="Systems-Research.html">Systems Research</a>
                             </li>
-                            <li><a href="Applications.html">Applications</a></li>
+                            <li><a href="Applications.html">Applications</a></li> -->
                             <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
                         </ul>
                     </li>
@@ -101,10 +101,10 @@
                             <li><a href="smartcity.html">Smart City Stack workshop</a></li>
                             <li><a href="girlgeekhack.html">GirlGeekHack'23 (Mangalore Subsection Edition)</a></li>
                             <li><a href="studentcongress.html">CS Student Congress</a></li>
-                        </ul></li>
+                        </ul></li>-->
 
 
-                    <li><a href="speakers.html">Speakers</a></li> -->
+                    <li><a href="speakers.html">Speakers</a></li> 
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
@@ -399,6 +399,39 @@
                     </div>
                 </div>
             </section>
+            <section id="agenda">
+                <div class="container">
+                    <header class="section-header">
+                        <h3>Website Committee</h3>
+                    </header>
+                    <div class="image-holder">
+                        <div>
+                            <img src="img/aneesh.jpeg" class="org-img">
+                            <a href="https://www.linkedin.com/in/aneesh-k-p-394a71259/" target="_blank"><p class="commitee-names">Aneesh K P</p></a>
+                            <p class="position">BMSCE, Bangalore</p>
+                        </div>
+                        <div>
+                            <img src="img/rohit.jpeg" class="org-img">
+                            <a href="https://sites.google.com/site/prasantmisra/" target="_blank"><p class="commitee-names">Rohit Verma</p></a>
+                            <p class="position">Intel Labs, Bangalore</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="agenda">
+                <div class="container">
+                    <header class="section-header">
+                        <h3>Social Media Committee</h3>
+                    </header>
+                    <div class="image-holder">
+                        <div>
+                            <img src="img/tk.jpeg" class="org-img">
+                            <a href="https://www.linkedin.com/in/tulasikrishna-tammina-20849924a/" target="_blank"><p class="commitee-names">Tulasikrishna Tammina</p></a>
+                            <p class="position">BMSCE, Bangalore</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!--
             <section id="agenda">
                 <div class="container">
@@ -464,7 +497,7 @@
                                     class="fa fa-twitter"></i></a>
                             <a href="https://facebook.com/ieeecsbsc" class="facebook" target="_blank"><i
                                     class="fa fa-facebook"></i></a>
-                            <a href="https://instagram.com/ieeecsbs" class="instagram" target="_blank"><i
+                            <a href="https://instagram.com/ieeecsbc" class="instagram" target="_blank"><i
                                     class="fa fa-instagram"></i></a>
                             <!-- <a href="#" class="google-plus"><i class="fa fa-youtube"></i></a> -->
                             <a href="https://www.linkedin.com/in/ieeecsbs/" class="linkedin" target="_blank"><i
