--- a/Technical-Committee.html
+++ b/Technical-Committee.html
@@ -119,22 +119,23 @@
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
+            <li ><a href="index.html">Home</a></li>
             <!-- <li><a href="about.html">About</a></li> -->
             <li>
               <a href="#">Committee</a>
 
               <ul class="nav-dropdown">
                 <li>
+                  <a href="Organizing-Committee.html">Organizing Committee</a>
+                </li>
+                <li>
                   <a
                     href="Technical-Committee.html"
                     target="_blank"
+                    class="menu-active"
                     rel="noopener noreferrer"
                     >Technical Program Committee</a
                   >
-                </li>
-                <li>
-                  <a href="Organizing-Committee.html">Organizing Committee</a>
                 </li>
               </ul>
             </li>
@@ -143,10 +144,10 @@
               <a href="#">Call for Papers</a>
               <ul class="nav-dropdown">
                 <li>
-                  <a href="Foundational-Research.html">Foundational Research</a>
+                  <a href="Foundational-Research.html">Topics of Interest</a>
                 </li>
-                <li><a href="Systems-Research.html">Systems Research</a></li>
-                <li><a href="Applications.html">Applications</a></li>
+                <!-- <li><a href="Systems-Research.html">Systems Research</a></li>
+                <li><a href="Applications.html">Applications</a></li> -->
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
@@ -163,9 +164,9 @@
                 </li>
                 <li><a href="studentcongress.html">CS Student Congress</a></li>
               </ul>
-            </li>
+            </li> -->
 
-            <li><a href="speakers.html">Speakers</a></li> -->
+            <li><a href="speakers.html">Speakers</a></li> 
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
@@ -693,7 +694,7 @@
                   ><i class="fa fa-facebook"></i
                 ></a>
                 <a
-                  href="https://instagram.com/ieeecsbs"
+                  href="https://instagram.com/ieeecsbc"
                   class="instagram"
                   target="_blank"
                   ><i class="fa fa-instagram"></i
