Technical committee data updated

--- a/Technical-Committee.html
+++ b/Technical-Committee.html
@@ -119,7 +119,7 @@
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <li ><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <!-- <li><a href="about.html">About</a></li> -->
             <li>
               <a href="#">Committee</a>
@@ -166,7 +166,7 @@
               </ul>
             </li> -->
 
-            <li><a href="speakers.html">Speakers</a></li> 
+            <li><a href="speakers.html">Speakers</a></li>
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
@@ -216,29 +216,21 @@
       </div>
     </section>
 
-    <!-- <table class="center">
+    <table class="center">
       <tr>
         <th>Name</th>
         <th>Affiliation</th>
       </tr>
       <tr>
-        <td>Abhishek Appaji</td>
-        <td>BMS CE, India</td>
-      </tr>
-      <tr>
-        <td>Aditya Challa</td>
-        <td>BITS Pilani KK Birla Goa Campus</td>
-      </tr>
-      <tr>
-        <td>Ajay Kumara</td>
+        <td>Ajay Kumara M A</td>
         <td>Lenoir-Rhyne University, NC USA</td>
       </tr>
       <tr>
-        <td>Anand Kumar</td>
+        <td>Anand Kumar M</td>
         <td>National Institute of Technology Karnataka</td>
       </tr>
       <tr>
-        <td>Anisha Rodrigues</td>
+        <td>Anisha Prima Rodrigues</td>
         <td>NMAM Institute of Technology</td>
       </tr>
       <tr>
@@ -246,48 +238,40 @@
         <td>SDM College of Engineering and Technology</td>
       </tr>
       <tr>
+        <td>Anitha N</td>
+        <td>BNM Institute of Technology</td>
+      </tr>
+      <tr>
         <td>Anupam Pattanayak</td>
-        <td>Raja N. L. Khan Women's College</td>
+        <td>IIIT Guwahati</td>
       </tr>
       <tr>
         <td>Anurag Satpathy</td>
-        <td>National Institute of Technology, Rourkela</td>
+        <td>Missouri University of Science and Technology</td>
       </tr>
       <tr>
         <td>Archana Mathur</td>
-        <td>Nitte Meenakshi Institute of Technology, India</td>
+        <td>Nitte Meenakshi Institute of Technology</td>
       </tr>
       <tr>
         <td>Arun Kumar</td>
         <td>NIT Rourkela</td>
       </tr>
       <tr>
-        <td>ARUN PARAMESWARAN</td>
-        <td>MIT MANIPAL</td>
+        <td>Asha S Manek</td>
+        <td>Global Academy of Technology</td>
       </tr>
       <tr>
-        <td>B Sathish</td>
-        <td>RV College of Engineering</td>
-      </tr>
-      <tr>
-        <td>Balaji N</td>
-        <td>NMAM Institute of Technology</td>
-      </tr>
-      <tr>
-        <td>Basavaraj</td>
-        <td>NITK, Surathkal</td>
-      </tr>
-      <tr>
-        <td>Bhabendu Mohanta</td>
-        <td>GITAM Deemed to be University</td>
+        <td>Ashoka D V</td>
+        <td>JSSATE BANGALORE</td>
       </tr>
       <tr>
         <td>Bhagath Parabattina</td>
-        <td>Lakireddy Bali Reddy College of Engineering</td>
+        <td>Lakireddy Bali Reddy College of Engineering Mylavaram</td>
       </tr>
       <tr>
         <td>Bharatesh Chakravarthi</td>
-        <td>Arizona State University, United States</td>
+        <td>Arizona State University</td>
       </tr>
       <tr>
         <td>Biswajeet Sethi</td>
@@ -299,123 +283,51 @@
       </tr>
       <tr>
         <td>Debashisha Jena</td>
-        <td>NITK, Surathkal, India</td>
+        <td>NITK, Surathkal</td>
       </tr>
       <tr>
-        <td>Dr Nagarathna</td>
-        <td>PES College of Engineering</td>
+        <td>Dilip Kumar Dalei</td>
+        <td>DRDO</td>
       </tr>
       <tr>
-        <td>Dr Kiran M</td>
-        <td>NITK suratkal</td>
+        <td>Farooque Azam</td>
+        <td>REVA University, Bangalore</td>
       </tr>
       <tr>
-        <td>Dr Ramakrishna Hegde</td>
-        <td>Vidyavardhaka College of Engineering</td>
+        <td>Gang Li</td>
+        <td>Deakin University, Australia</td>
       </tr>
       <tr>
-        <td>Dr Subidh Ali</td>
-        <td>IIT Bhilai</td>
+        <td>Geetha V</td>
+        <td>NITK Surathkal</td>
       </tr>
       <tr>
-        <td>Dr Thippeswamy K</td>
-        <td>VTU</td>
+        <td>Hemachandra Gudimindla</td>
+        <td>Ramaiah Institute of Technology</td>
       </tr>
       <tr>
-        <td>Dr. Hemachandra Gudimindla</td>
-        <td>Ramaiah Institute of Technology, India</td>
-      </tr>
-      <tr>
-        <td>Dr. Anjan Krishnamurthy</td>
-        <td>BMSIT and Management</td>
-      </tr>
-      <tr>
-        <td>Dr. Asha Manek</td>
-        <td>Global Academy of Technology, India</td>
-      </tr>
-      <tr>
-        <td>Dr. Asha T</td>
-        <td>Bangalore Institute of Technology</td>
-      </tr>
-      <tr>
-        <td>Dr. Jalesh Kumar</td>
-        <td>JNNCE Shimoga</td>
-      </tr>
-      <tr>
-        <td>Dr. Manjunath Aradhya</td>
-        <td>JSS S&T University, Mysore</td>
-      </tr>
-      <tr>
-        <td>Dr. Naveen</td>
-        <td>IIIT Vadodara</td>
-      </tr>
-      <tr>
-        <td>Dr. Pramod Kumar S</td>
-        <td>JNNCE, Shimoga, India</td>
-      </tr>
-      <tr>
-        <td>Dr. Ratneshwar</td>
-        <td>MIET Meerut</td>
-      </tr>
-      <tr>
-        <td>Dr. Shiva Darshan</td>
-        <td>Manipal Institute of Technology Bengaluru</td>
-      </tr>
-      <tr>
-        <td>Dr. Shyam Lal</td>
-        <td>NIT Karnataka</td>
-      </tr>
-      <tr>
-        <td>Dr. VASAVI BANDE</td>
-        <td>Siddhartha Institute of Engineering and Technology</td>
-      </tr>
-      <tr>
-        <td>Dr. Vinay Jadoun</td>
-        <td>Manipal Institute of Technology, Manipal, India</td>
-      </tr>
-      <tr>
-        <td>Dr. Padmashree T</td>
-        <td>R.V. College of Engineering</td>
-      </tr>
-      <tr>
-        <td>Dr. Sathish Kumar</td>
-        <td>RNSIT</td>
-      </tr>
-      <tr>
-        <td>Emmanuel Shubhakar</td>
-        <td>MNIT Jaipur</td>
+        <td>Jayapandian N</td>
+        <td>Christ University</td>
       </tr>
       <tr>
         <td>Jaydeep Das</td>
         <td>KIIT Deemed to be University</td>
       </tr>
       <tr>
-        <td>Jidesh Padikkal</td>
-        <td>National Institute of Technology Karnataka</td>
-      </tr>
-      <tr>
         <td>Kakelli Anil Kumar</td>
         <td>Vellore Institute of Technology, Vellore</td>
       </tr>
       <tr>
-        <td>Kaushal Sengar</td>
-        <td>National Institute of Technology Raipur</td>
+        <td>Kaushal Pratap Sengar</td>
+        <td>Madhav Institute of Technology and Science, Gwalior</td>
       </tr>
       <tr>
         <td>Keshav Sood</td>
-        <td>Deakin Uni</td>
+        <td>Deakin University</td>
       </tr>
       <tr>
         <td>Khoirom Johnson Singh</td>
         <td>Indian Institute of Technology Roorkee</td>
-      </tr>
-      <tr>
-        <td>Kodeeswara Kumaran</td>
-        <td>MSRIT</td>
-      </tr>
-      <tr>
-        <td>Krishnan CMC</td>
-        <td>NITK Surathkal</td>
       </tr>
       <tr>
         <td>Latha Tamilselvan</td>
@@ -423,14 +335,24 @@
       </tr>
       <tr>
         <td>Mamatha Balipa</td>
-        <td>NMAMIT</td>
+        <td>NMAM Institute of Technology</td>
+      </tr>
+      <tr>
+        <td>Manjula Gururaj Rao</td>
+        <td>
+          NITTE (Deemed to be University), NMAM Institute of Technology Nitte
+        </td>
+      </tr>
+      <tr>
+        <td>Manjunath Aradhya VN</td>
+        <td>JSS S&amp;T University, Mysore</td>
       </tr>
       <tr>
         <td>Manoj Kumar Kar</td>
-        <td>Tolani Maritime Institute Pune</td>
+        <td>Tolani Maritime Institute, Pune</td>
       </tr>
       <tr>
-        <td>Meenaxi Raikar</td>
+        <td>Meenaxi M Raikar</td>
         <td>K L E Technological University, Hubli</td>
       </tr>
       <tr>
@@ -438,78 +360,56 @@
         <td>Chandigarh University</td>
       </tr>
       <tr>
-        <td>Min Yu</td>
-        <td>
-          Institute of Information Engineering, Chinese Academy of Sciences
-        </td>
-      </tr>
-      <tr>
         <td>Monika Mangla</td>
         <td>Dwarkadas J Sanghvi College of Engineering</td>
       </tr>
       <tr>
-        <td>Muzammil Parvez</td>
-        <td>KL University</td>
-      </tr>
-      <tr>
-        <td>NAGARAJA S</td>
+        <td>Nagaraja G S</td>
         <td>RV COLLEGE OF ENGINEERING</td>
       </tr>
       <tr>
-        <td>Nagaratna Chittaragi</td>
+        <td>Nagaratna B Chittaragi</td>
         <td>Siddaganga Institute of Technology</td>
       </tr>
       <tr>
-        <td>NAGARJUN E</td>
-        <td>University Visvesvaraya College of Engineering</td>
-      </tr>
-      <tr>
-        <td>Naveen Aradhya</td>
+        <td>Naveen N C Aradhya</td>
         <td>JSS Academy of Technical Education</td>
       </tr>
       <tr>
-        <td>Nithin Raj</td>
-        <td>Government Engineering College Wayanad</td>
-      </tr>
-      <tr>
-        <td>P Maheswar Reddy</td>
-        <td>National Institute of Technology Agartala</td>
+        <td>Padmashree T</td>
+        <td>R.V.College of Engineering</td>
       </tr>
       <tr>
         <td>Pooja Chaturvedi</td>
         <td>Institute of Technology, Nirma University, Ahmedabad</td>
       </tr>
       <tr>
-        <td>Pradeep Kanchan</td>
-        <td>NMAMIT</td>
-      </tr>
-      <tr>
-        <td>Prakash Gajanan Burade</td>
-        <td>Sandip University, Nashik</td>
-      </tr>
-      <tr>
         <td>Pramit Mazumdar</td>
         <td>Indian Institute of Information Technology Vadodara</td>
       </tr>
       <tr>
-        <td>Pramod Kumar</td>
-        <td>Assistant Professor, MIT</td>
+        <td>Pramod Kumar S</td>
+        <td>JNNCE, Shimoga</td>
       </tr>
       <tr>
-        <td>PRAVEENA T</td>
+        <td>Praveena T</td>
         <td>RV COLLEGE OF ENGINEERING</td>
+      </tr>
+      <tr>
+        <td>Pravin Sonwane</td>
+        <td>Poornima College of Engineering</td>
       </tr>
       <tr>
         <td>Priya L</td>
         <td>Rajalakshmi Engineering College</td>
       </tr>
       <tr>
-        <td>Pushparaj Shetty</td>
-        <td>NITK, India</td>
+        <td>Pushparaj D Shetty</td>
+        <td>NITK</td>
       </tr>
       <tr>
-        <td>Qian Li</td>
-        <td>Curtin University</td>
+        <td>R Kavitha</td>
+        <td>SIDDHARTHA INSTITUTE OF ENGINEERING &amp; TECHNOLOGY</td>
       </tr>
       <tr>
         <td>Raghavendra C K</td>
@@ -520,11 +420,11 @@
         <td>The LNMIIT</td>
       </tr>
       <tr>
-        <td>Rajat Subhra Chakraborty</td>
-        <td>IIT Kharagpur</td>
+        <td>Ratneshwar Ratnesh</td>
+        <td>MIET Meerut</td>
       </tr>
       <tr>
-        <td>Ravi Barpanda</td>
+        <td>Ravi Sankar Barpanda</td>
         <td>VIT-AP University</td>
       </tr>
       <tr>
@@ -532,111 +432,76 @@
         <td>ASBM UNIVERSITY</td>
       </tr>
       <tr>
-        <td>Rimjhim Singh</td>
+        <td>Rimjhim Dr. Singh</td>
         <td>Amrita Vishwa Vidyapeetham</td>
       </tr>
       <tr>
-        <td>Rongxin Xu</td>
-        <td>Hunan University</td>
+        <td>Rohit Verma</td>
+        <td>Intel Labs</td>
       </tr>
       <tr>
-        <td>Roshan Fernandes</td>
-        <td>NMAM Institute of Technology</td>
-      </tr>
-      <tr>
-        <td>S Krishna Rao</td>
-        <td>Siddhartha Institute of Engineering & Technology</td>
-      </tr>
-      <tr>
-        <td>Sahana Prabhu</td>
+        <td>Sahana M Prabhu</td>
         <td>RBEI</td>
       </tr>
       <tr>
-        <td>Sanjeev Dhawan</td>
-        <td>UIET, Kurukshetra University Kurukshetra, India</td>
+        <td>Sandhya S</td>
+        <td>R. V. College of Engineering</td>
       </tr>
       <tr>
-        <td>Sankara Narayanan S</td>
-        <td>
-          Vel Tech Rangarajan Dr. Sagunthala R&D Institute of Science and
-          Technology
-        </td>
+        <td>Sanju V</td>
+        <td>REVA University</td>
       </tr>
       <tr>
-        <td>Santosh Satapathy</td>
+        <td>Santosh Kumar Satapathy</td>
         <td>Pandit Deendayal Energy University</td>
       </tr>
       <tr>
         <td>Sara Ali</td>
-        <td>Shadan Women's College of Engineering and Technology</td>
+        <td>Global Institute of Engineering and Technology</td>
       </tr>
       <tr>
-        <td>Sathya Arunachalam</td>
-        <td>Rajalakshmi Engineering College</td>
+        <td>Sathish Kumar S</td>
+        <td>RNSIT</td>
       </tr>
       <tr>
         <td>Shefali Jagwani</td>
         <td>NMIT, Bangalore</td>
       </tr>
       <tr>
-        <td>Shu Li</td>
-        <td>IIE, CAS</td>
+        <td>Shyam Lal</td>
+        <td>NIT Karnataka</td>
       </tr>
       <tr>
-        <td>Smriti Bhandari</td>
+        <td>Smriti H Bhandari</td>
         <td>LF</td>
-      </tr>
-      <tr>
-        <td>Snehanshu Saha</td>
-        <td>BITS Pilani Goa Campus</td>
       </tr>
       <tr>
         <td>Sobhana N V</td>
         <td>Rajiv Gandhi Institute of Technology, Kottayam</td>
       </tr>
       <tr>
-        <td>Spoorthi Shetty</td>
-        <td>NMAMIT, Nitte</td>
-      </tr>
-      <tr>
-        <td>Sravan Danda</td>
-        <td>BITS Pilani K K Birla Goa Campus</td>
+        <td>Sourav Kanti Addya</td>
+        <td>NIT Karnataka</td>
       </tr>
       <tr>
         <td>Sridevi Saralaya</td>
         <td>SJEC</td>
       </tr>
       <tr>
-        <td>Stefka FIdanova</td>
-        <td>
-          Bulgarian Academy of Sciences, Institute of Mathematics and
-          Informatics and Institute of Information and Communication
-          Technologies
-        </td>
-      </tr>
-      <tr>
-        <td>Suchitra V</td>
-        <td>National Institute of Technology Karnataka, Surathkal</td>
-      </tr>
-      <tr>
-        <td>Sudeepa Dey</td>
-        <td>PES university</td>
+        <td>Subidh Ali</td>
+        <td>IIT Bhilai</td>
       </tr>
       <tr>
         <td>Sujithra M</td>
         <td>Coimbatore Institute of Technology</td>
       </tr>
       <tr>
-        <td>Suresh Papneja</td>
-        <td>Ericsson Global India Pvt Ltd</td>
-      </tr>
-      <tr>
-        <td>Tanweer Ali</td>
-        <td>Manipal Institute of Technology, Manipal, India</td>
+        <td>Usha J</td>
+        <td>RV College of Engineering</td>
       </tr>
       <tr>
         <td>Veeraiah Duggineni</td>
-        <td>Lakireddy Bali Reddy College of Engineering</td>
+        <td>Lakireddy Bali Reddy College of Engineering (A)</td>
       </tr>
       <tr>
         <td>Veeraswamy A</td>
@@ -646,34 +511,23 @@
         </td>
       </tr>
       <tr>
-        <td>Vinod Joshi</td>
-        <td>Manipal Institute of Technology, Manipal, India</td>
+        <td>Vikas Singh</td>
+        <td>NATIONAL INSTITUTE OF TECHNOLOGY KARNATAKA SURATHKAL</td>
+      </tr>
+      <tr>
+        <td>Vinay Kumar Jadoun</td>
+        <td>Manipal Institute of Technology, Manipal</td>
       </tr>
       <tr>
         <td>Vishal Moyal</td>
         <td>SVKM's Institute of Technology, Dhule</td>
       </tr>
       <tr>
-        <td>Vikas Singh</td>
-        <td>National Institute of Technology Karnataka</td>
-      </tr>
-      <tr>
-        <td>Vivekraj K</td>
-        <td>Indian Institute of Information Technology Dharwad</td>
-      </tr>
-      <tr>
-        <td>Wenjia Niu</td>
-        <td>Beijing Jiaotong University</td>
-      </tr>
-      <tr>
-        <td>Xin Han</td>
-        <td>University of Macau</td>
-      </tr>
-      <tr>
         <td>Yukata Watanobe</td>
-        <td>The University of Aizu, Japan</td>
+        <td>The University of Aizu</td>
       </tr>
-    </table> -->
+    </table>
+    <br><br>
 
     <footer id="footer">
       <div class="footer-top">
