Technical committee data updated

--- a/Technical-Committee.html
+++ b/Technical-Committee.html
@@ -512,7 +512,7 @@
       </tr>
       <tr>
         <td>Vikas Singh</td>
-        <td>NATIONAL INSTITUTE OF TECHNOLOGY KARNATAKA SURATHKAL</td>
+        <td>NIT Karnataka</td>
       </tr>
       <tr>
         <td>Vinay Kumar Jadoun</td>
