--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -267,13 +267,27 @@
             <section id="agenda">
                 <div class="container">
                     <header class="section-header">
-                        <h3>Finance Chairs</h3>
+                        <h3>Finance Chair</h3>
                     </header>
                     <div class="image-holder">
                         <div>
                             <img src="img/mat.jpg" class="org-img">
                             <a href="https://www.linkedin.com/in/archana-mathur-88731958/" target="_blank"><p class="commitee-names">Archana Mathur</p></a>
                             <p class="position">NMIT, Bangalore, India</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="agenda">
+                <div class="container">
+                    <header class="section-header">
+                        <h3>Sponsorship Chair</h3>
+                    </header>
+                    <div class="image-holder">
+                        <div>
+                            <img src="img/abhishek_appaji.jpeg" class="org-img">
+                            <a href="https://www.linkedin.com/in/abhishek-appaji/?originalSubdomain=in" target="_blank"><p class="commitee-names">Abhishek Appaji</p></a>
+                            <p class="position">BMSCE, Bangalore, India</p>
                         </div>
                     </div>
                 </div>
